[package]
name = "wv_linewise"
version = "0.2.0"
authors = ["Matthew Forrester <matthew.forrester@speechmarks.com>"]
edition = "2018"

[dependencies]
web-view = { version = "0.7.3", features=["edge"] }
# web-view = { version = "0.6.2", features = ["edge"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = "1.0.105"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.0"

[profile.release]
debug = true
